// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`css complex nested media queries 1`] = `
"@media (max-width:600px) {
  .css-1vjvce5 h1 {
    font-size: 1.4rem;
  }
}

@media (max-width:400px),(max-height:420px) {
  .css-1vjvce5 h1 {
    font-size: 1.1rem;
  }
}"
`;

exports[`css complex nested styles 1`] = `
".css-s7aswl {
  color: blue;
}

.css-s7aswl:hover {
  color: green;
}

.css-s7aswl:hover .name {
  color: amethyst;
}

.css-s7aswl:hover .name:focus {
  color: burlywood;
}

@media (min-width:420px) {
  .css-s7aswl:hover .name:focus {
    color: rebeccapurple;
  }
}"
`;

exports[`css handles media query merges 1`] = `
".css-vs4yix {
  color: darkslateblue;
  color: red;
  color: purple;
}

@media (min-width:420px) {
  .css-vs4yix {
    color: amethyst;
  }
}

@media (min-width:640px) {
  .css-vs4yix {
    color: rebeccapurple;
  }
}

@media (min-width:960px) {
  .css-vs4yix {
    color: burlywood;
  }
}

@media (min-width:640px) {
  .css-vs4yix {
    color: blue;
  }
}

@media (min-width:640px) {
  .css-vs4yix {
    color: aquamarine;
  }
}"
`;

exports[`css media queries with multiple nested selectors 1`] = `
".css-snkf7h {
  color: blue;
}

@media (max-width:400px) {
  .css-snkf7h {
    color: green;
  }

  .css-snkf7h h1 {
    color: red;
  }

  .css-snkf7h span {
    color: red;
  }
}"
`;

exports[`css media query with nested selector with nested selector on root 1`] = `
".css-1hvbare span {
  color: blue;
}

@media (max-width:400px) {
  .css-1hvbare {
    color: green;
  }

  .css-1hvbare span {
    color: red;
  }
}"
`;

exports[`css media query with nested selector without declarations on root 1`] = `
"@media (max-width:400px) {
  .css-156bult {
    color: green;
  }

  .css-156bult span {
    color: red;
  }
}"
`;
